zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/empty_packed_union.zig
export fn foo() void {
    const U = packed union {};
    _ = @as(U, undefined);
}

// error
//
// :2:22: error: packed union has no fields
